--- a/wmes/bruno.html
+++ b/wmes/bruno.html
@@ -59,6 +59,19 @@
         <div id="tab-container">
           <div id="tab-one" class="tab open">
 
+            <div class="flex-column" style="margin: 50px 0 -40px;">
+              <div class="flex-row border-box">
+                <h3 class="subtitle">Owner History</h3>
+                
+                <div style="flex: 1 1 auto;">
+                  <ul style="margin: 0;">
+                    <li>Original | 02/10/2012 ⋆ <a href="https://www.chickensmoothie.com/Forum/memberlist.php?mode=viewprofile&u=273065">PRFLightMyFire</a> (FCFS Riddle)</li>
+                    <li>03/11/2025 ⋆ flyteck (gifted)</li>
+                  </ul>
+                </div>
+              </div>
+            </div> 
+
             <hr>
             <div class="area-title">Breeding Info</div>
             <div class="flex-column" style="margin-top: -10px;">
