--- a/wmes/alsike.html
+++ b/wmes/alsike.html
@@ -32,7 +32,7 @@
     </div>
 
     <hr style="margin-top:20px">
-    <div class="area-title">Always discovering something new</div>
+    <div class="area-title">Mean Green Fluffy Machine</div>
 
         <div class="flex-row">
           <img src="https://flyteck.github.io/flyteck-wme-storage/img/art/alsike/stylizedhsAlsike.png" class="display-image wide">
