--- a/wmes/aleus.html
+++ b/wmes/aleus.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-  <meta content="width=device-width, intial-scale=1" name="viewport" />
+  <meta content="width=device-width, initial-scale=1" name="viewport" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
 
   <link rel="stylesheet" href="../css.css">
@@ -32,7 +32,7 @@
     </div>
 
     <hr style="margin-top:20px">
-    <div class="area-title">The rugged mountaineer</div>
+    <div class="area-title">The rugged adventurer</div>
 
         <div class="flex-row">
           <img src="https://flyteck.github.io/flyteck-wme-storage/img/art/aleus/stylizedhsAleus.png" class="display-image wide">
