--- a/wmes/acacia.html
+++ b/wmes/acacia.html
@@ -10,7 +10,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Alumni+Sans+SC:ital,wght@0,100..900;1,100..900&family=Mooli&family=Sedgwick+Ave+Display&display=swap" rel="stylesheet">
 
-  <title>Flyteck's WMEs - Bailey</title>
+  <title>Flyteck's WMEs - Acacia</title>
 </head>
 
 <body class="dark-mode">
@@ -19,7 +19,7 @@
   <a href="../index.html" class="button" id="back-button"><i class="fa-solid fa-angle-left"></i></a>
 
   <div class="flex-column container">
-    <h1><i class="fa-solid fa-mug-hot"></i> <span id="name">Bailey</span></h1>
+    <h1><i class="fa-solid fa-crow"></i> <span id="name">Acacia</span></h1>
 
     <div class="flex-row" id="page-nav">
       <select name="navigation" id="nav-dropdown">
@@ -32,22 +32,23 @@
     </div>
 
     <hr style="margin-top:20px">
-    <div class="area-title">Cool and confident</div>
+    <div class="area-title">Avian Enthusiast</div>
 
         <div class="flex-row">
-          <img src="https://flyteck.github.io/flyteck-wme-storage/img/art/bailey/stylizedhsBailey.png" class="display-image">
+          <img src="https://flyteck.github.io/flyteck-wme-storage/img/art/acacia/stylizedhsAcacia.png" class="display-image wide">
           <ul>
             <li><h2 style="margin:0;position: absolute;top: -20px;background: var(--white);padding: 0 6px;left: 10px;">Basics</h2></li>
-            <li><b>Bailey</b> | Named for road salt</li>
-            <li>13.2hh ⋆ Mare ⋆ 6 years</li>
-            <li><b>Mate:</b> <a href="saline.html">Saline</a></li>
+            <li><b>Acacia</b></li>
+            <li>13.2hh ⋆ Mare ⋆ 4 years</li>
+            <li><b>Mate:</b> Open</li>
+            <li><b><a href="aleusherd.html">Herd Page</a></b></li>
             <li class="divider"><i class="fa-solid fa-star"></i></li>
             <li><b>Designer:</b> CopperChaos</li>
-            <li><b>Acquired On:</b> 17/12/2024</li>
-            <li><b>Acquired By:</b> Raffle (G1)</li>
+            <li><b>Acquired On:</b> 17/10/2025</li>
+            <li><b>Acquired By:</b> Emporium Breeding (G2)</li>
             <li class="divider"><i class="fa-solid fa-star"></i></li>
-            <li class="center"><b><a href="https://flyteck.github.io/flyteck-wme-storage/#bailey-tracker" target="_blank">ARPG Tracker + Gallery</a></b></li>
-            <li class="center"><b><a href="https://www.chickensmoothie.com/Forum/viewtopic.php?t=5011380" target="_blank">Adopt Page</a></b> ⋆ <b>ID#</b> 0040 V3</li>
+            <li class="center"><b><a href="https://flyteck.github.io/flyteck-wme-storage/#acacia-tracker" target="_blank">ARPG Tracker + Gallery</a></b></li>
+            <li class="center"><b><a href="https://www.chickensmoothie.com/Forum/viewtopic.php?f=124&t=5084146&p=150528676" target="_blank">Adopt Page</a></b> ⋆ <b>ID#</b> 1429 V3</li>
           </ul>
         </div>
 
@@ -63,10 +64,10 @@
             <div class="flex-column" style="margin-top: -10px;">
               <div class="flex-row border-box">
                 <h3 class="subtitle">Slots</h3>
-                <ul style="overflow:scroll;max-height: 200px; justify-content: flex-start;">
-                  <li class="list-header"><span class="open-green">Open</span> || 11/12 Available</li>
+                <ul style="overflow:scroll;max-height: 200px; justify-content: flex-start; flex-grow:2;">
+                  <li class="list-header"><span class="open-green">Open</span> || 11/11 Available</li>
 
-                  <li class="number"><b>1</b> Bailey x <a href="saline.html">Saline</a> = <a href="https://www.chickensmoothie.com/Forum/viewtopic.php?f=124&t=5065508&p=149734859">Kitsune</a></li>
+                  <li class="number"><b>1</b> ---</li>
                   <li class="number"><b>2</b> ---<li>
                   <li class="number"><b>3</b> ---</li>
                   <li class="number"><b>4</b> ---</li>
@@ -77,18 +78,42 @@
                   <li class="number"><b>9</b> ---</li>
                   <li class="number"><b>10</b> ---</li>
                   <li class="number"><b>11</b> ---</li>
-                  <li class="number"><b>12</b> ---</li>
                 </ul>
-                <div style="flex: 1 1 auto;">
-                  <img src="https://flyteck.github.io/flyteck-wme-storage/img/art/bailey/baileykoel2.png" class="icon-image" style="zoom:80%">
+                <div style="flex: 1 1 auto;justify-content: center;display: flex;">
+                  <img src="https://flyteck.github.io/flyteck-wme-storage/img/art/acacia/acaciadark.png" class="icon-image" style="zoom:80%">
                 </div>
               </div>
             </div> 
 
+            <div class="heritage">
+                  <h3 class="subtitle">Heritage</h3>
+                 <div class="flex-row">
+                    <div class="flex-column">
+                      <span class="tooltip">
+                        <span class="tooltiptext"><img src="https://www.chickensmoothie.com/oekaki/image/image.php?id=4354902&size=large&format=png&rev=1760738787"></span>
+                        <div class="center"><i class="fa-solid fa-venus"></i> Acacia</div>
+                      </span>
+                     </div>
+                     
+                     <div class="flex-column" style="gap:30px">
+                      <span class="tooltip">
+                        <span class="tooltiptext"><img src="https://www.chickensmoothie.com/oekaki/image/image.php?id=1318436&size=large&format=png&rev=1356052587"></span>
+                        <a href="https://www.chickensmoothie.com/Forum/viewtopic.php?f=124&t=1569077"><i class="fa-solid fa-mars"></i> Akiba</a>
+                      </span>
+
+                      <span class="tooltip">
+                        <span class="tooltiptext"><img src="https://www.chickensmoothie.com/oekaki/image/image.php?id=4328606&size=large&format=png&rev=1749757401"></span>
+                        <a href="https://www.chickensmoothie.com/Forum/viewtopic.php?f=124&t=5057569"><i class="fa-solid fa-venus"></i> Inaldi</a>
+                      </span>
+                    </div>
+
+
+                  </div>
+              </div>
+
             <div class="border-box" id="foal-gallery">
               <h3 class="subtitle">Foal Gallery</h3>
               <div class="flex-row">
-                <a href="https://www.chickensmoothie.com/Forum/viewtopic.php?f=124&t=5065508&p=149734859"><img src="https://www.chickensmoothie.com/oekaki/image/image.php?id=4337088&size=large&format=png&rev=1752708633"></a>
               </div>
             </div>
           </div>
@@ -123,25 +148,29 @@
                   <div class="area-title">Design Details</div>
                   <div class="flex-row">
                     <ul>
-                      <li><b>Type:</b> Regular Ragtail</li>
-                      <li><b>Color:</b> Ivory Champagne</li>
-                      <li><b>Quip:</b> Lace</li>
+                      <li><b>Type:</b> Regular</li>
+                      <li><b>Color:</b> Sooty Buckskin Tobiano</li>
+                      <li><b>Quip:</b> Reverse Seamless + Regular Swirl</li>
                       <li class="divider"><i class="fa-solid fa-star"></i></li>
-                      <li><b>Build:</b> Stocky</li>
-                      <li><b>Breed Ref:</b> Fjord</li>
-                      <li><b>Notes:</b> Slight roman nose, wavy fur and curly mane</li>
+                      <li><b>Build:</b> Athletic, Masculine</li>
+                      <li><b>Breed Ref:</b> Irish Sport Horse</li>
+                      <li><b>Notes:</b> Slight roman nose, large feet, slicked back mane<li>
                       <li class="divider"><i class="fa-solid fa-star"></i></li>
                       <div>
-                        <div class="swatch" style="background: #f3e8dd;">#f3e8dd</div>
-                        <div class="swatch" style="background: #fff5eb;">#fff5eb</div>
-                        <div class="swatch" style="background: #ede0d4;">#ede0d4</div>
-                        <div class="swatch" style="background: #d4bdb6;">#d4bdb6</div>
-                        <div class="swatch" style="background: #dfb2a4;">#dfb2a4</div>                        
-                        <div class="swatch" style="background: #a99b95;"><span style="transform: scale(.9, 1);">#a99b95</span></div>
-                        <div class="swatch" style="background: #8b5f3c;">#8b5f3c</div>
+                        <div class="swatch" style="background: #2f1d11;">#2f1d11</div>
+                        <div class="swatch" style="background: #44220c;">#44220c</div>
+                        <div class="swatch" style="background: #673b1b;">#673b1b</div>
+                        <div class="swatch" style="background: #9d6439;">#9d6439</div>
+                        <div class="swatch" style="background: #f7d4a4;">#f7d4a4</div>
+                        <div class="swatch" style="background: #82502b;">#82502b</div>
+                        <div class="swatch" style="background: #bb9564;">#bb9564</div>
+                        <div class="swatch" style="background: #fffaf9;">#fffaf9</div>
+                        <div class="swatch" style="background: #e0a589;">#e0a589</div>
+                        <div class="swatch" style="background: #82716a;">#82716a</div>
+                        <div class="swatch" style="background: #775039;">#775039</div>
                       </div>
                     </ul>
-                    <img src="https://www.chickensmoothie.com/oekaki/image/image.php?id=4284884&size=large&format=png&rev=1734472137" class="display-image">
+                    <img src="https://www.chickensmoothie.com/oekaki/image/image.php?id=4354902&size=large&format=png&rev=1760738787" class="display-image">
                   </div>
 
               
