--- a/wmes/affogato.html
+++ b/wmes/affogato.html
@@ -10,7 +10,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Alumni+Sans+SC:ital,wght@0,100..900;1,100..900&family=Mooli&family=Sedgwick+Ave+Display&display=swap" rel="stylesheet">
 
-  <title>Flyteck's WMEs - Bailey</title>
+  <title>Flyteck's WMEs - Affogato</title>
 </head>
 
 <body class="dark-mode">
@@ -19,7 +19,7 @@
   <a href="../index.html" class="button" id="back-button"><i class="fa-solid fa-angle-left"></i></a>
 
   <div class="flex-column container">
-    <h1><i class="fa-solid fa-mug-hot"></i> <span id="name">Bailey</span></h1>
+    <h1><i class="fa-solid fa-ice-cream"></i> <span id="name">Affogato</span></h1>
 
     <div class="flex-row" id="page-nav">
       <select name="navigation" id="nav-dropdown">
@@ -32,22 +32,23 @@
     </div>
 
     <hr style="margin-top:20px">
-    <div class="area-title">Cool and confident</div>
+    <div class="area-title">"Well ain't you a cutie!"</div>
 
         <div class="flex-row">
-          <img src="https://flyteck.github.io/flyteck-wme-storage/img/art/bailey/stylizedhsBailey.png" class="display-image">
+          <img src="https://flyteck.github.io/flyteck-wme-storage/img/art/affogato/stylizedhsAffogato.png" class="display-image">
           <ul>
             <li><h2 style="margin:0;position: absolute;top: -20px;background: var(--white);padding: 0 6px;left: 10px;">Basics</h2></li>
-            <li><b>Bailey</b> | Named for road salt</li>
-            <li>13.2hh ⋆ Mare ⋆ 6 years</li>
-            <li><b>Mate:</b> <a href="saline.html">Saline</a></li>
+            <li><b>Affogato</b></li>
+            <li>12hh ⋆ Mare ⋆ 8 Years</li>
+            <li><b>Mate:</b> Open</li>
+            <li><b><a href="aleusherd.html">Herd Page</a></b></li>
             <li class="divider"><i class="fa-solid fa-star"></i></li>
-            <li><b>Designer:</b> CopperChaos</li>
-            <li><b>Acquired On:</b> 17/12/2024</li>
-            <li><b>Acquired By:</b> Raffle (G1)</li>
+            <li><b>Designer:</b> Jensen Ackles</li>
+            <li><b>Acquired On:</b> 06/12/2025</li>
+            <li><b>Acquired By:</b> FCFS Art (G1)</li>
             <li class="divider"><i class="fa-solid fa-star"></i></li>
-            <li class="center"><b><a href="https://flyteck.github.io/flyteck-wme-storage/#bailey-tracker" target="_blank">ARPG Tracker + Gallery</a></b></li>
-            <li class="center"><b><a href="https://www.chickensmoothie.com/Forum/viewtopic.php?t=5011380" target="_blank">Adopt Page</a></b> ⋆ <b>ID#</b> 0040 V3</li>
+            <li class="center"><b><a href="https://flyteck.github.io/flyteck-wme-storage/#affogato-tracker" target="_blank">ARPG Tracker + Gallery</a></b></li>
+            <li class="center"><b><a href="https://www.chickensmoothie.com/Forum/viewtopic.php?f=124&t=5095540" target="_blank">Adopt Page</a></b> ⋆ <b>ID#</b> 1711 V3</li>
           </ul>
         </div>
 
@@ -64,9 +65,9 @@
               <div class="flex-row border-box">
                 <h3 class="subtitle">Slots</h3>
                 <ul style="overflow:scroll;max-height: 200px; justify-content: flex-start;">
-                  <li class="list-header"><span class="open-green">Open</span> || 11/12 Available</li>
+                  <li class="list-header"><span class="open-green">Open</span> || 11/11 Available</li>
 
-                  <li class="number"><b>1</b> Bailey x <a href="saline.html">Saline</a> = <a href="https://www.chickensmoothie.com/Forum/viewtopic.php?f=124&t=5065508&p=149734859">Kitsune</a></li>
+                  <li class="number"><b>1</b> ---</li>
                   <li class="number"><b>2</b> ---<li>
                   <li class="number"><b>3</b> ---</li>
                   <li class="number"><b>4</b> ---</li>
@@ -77,10 +78,9 @@
                   <li class="number"><b>9</b> ---</li>
                   <li class="number"><b>10</b> ---</li>
                   <li class="number"><b>11</b> ---</li>
-                  <li class="number"><b>12</b> ---</li>
                 </ul>
-                <div style="flex: 1 1 auto;">
-                  <img src="https://flyteck.github.io/flyteck-wme-storage/img/art/bailey/baileykoel2.png" class="icon-image" style="zoom:80%">
+                <div style="flex: 1 1 auto; justify-content: flex-end; display: flex;">
+                  <img src="https://flyteck.github.io/flyteck-wme-storage/img/art/affogato/affogatobutch.png" class="icon-image" style="zoom: 60%;">
                 </div>
               </div>
             </div> 
@@ -88,7 +88,6 @@
             <div class="border-box" id="foal-gallery">
               <h3 class="subtitle">Foal Gallery</h3>
               <div class="flex-row">
-                <a href="https://www.chickensmoothie.com/Forum/viewtopic.php?f=124&t=5065508&p=149734859"><img src="https://www.chickensmoothie.com/oekaki/image/image.php?id=4337088&size=large&format=png&rev=1752708633"></a>
               </div>
             </div>
           </div>
@@ -123,25 +122,28 @@
                   <div class="area-title">Design Details</div>
                   <div class="flex-row">
                     <ul>
-                      <li><b>Type:</b> Regular Ragtail</li>
-                      <li><b>Color:</b> Ivory Champagne</li>
+                      <li><b>Type:</b> Regular Arctic</li>
+                      <li><b>Color:</b> Black Sabino</li>
                       <li><b>Quip:</b> Lace</li>
                       <li class="divider"><i class="fa-solid fa-star"></i></li>
-                      <li><b>Build:</b> Stocky</li>
-                      <li><b>Breed Ref:</b> Fjord</li>
-                      <li><b>Notes:</b> Slight roman nose, wavy fur and curly mane</li>
+                      <li><b>Build:</b> Balanced</li>
+                      <li><b>Breed Ref:</b> Icelandic Horse</li>
+                      <li><b>Notes:</b> Fluffy inner ears, hairless nose</li>
                       <li class="divider"><i class="fa-solid fa-star"></i></li>
-                      <div>
-                        <div class="swatch" style="background: #f3e8dd;">#f3e8dd</div>
-                        <div class="swatch" style="background: #fff5eb;">#fff5eb</div>
-                        <div class="swatch" style="background: #ede0d4;">#ede0d4</div>
-                        <div class="swatch" style="background: #d4bdb6;">#d4bdb6</div>
-                        <div class="swatch" style="background: #dfb2a4;">#dfb2a4</div>                        
-                        <div class="swatch" style="background: #a99b95;"><span style="transform: scale(.9, 1);">#a99b95</span></div>
-                        <div class="swatch" style="background: #8b5f3c;">#8b5f3c</div>
+                     <div>
+                        <div class="swatch" style="background: #1c1414;">#1c1414</div>
+                        <div class="swatch" style="background: #221a19;">#221a19</div>
+                        <div class="swatch" style="background: #281f1d;">#281f1d</div>
+                        <div class="swatch" style="background: #ebe8e3;">#ebe8e3</div>
+                        <div class="swatch" style="background: #d0c6aa;">#d0c6aa</div>
+                        <div class="swatch" style="background: #9c5416;">#9c5416</div>
+                        <div class="swatch" style="background: #d7b3a6;">#d7b3a6</div>
+                        <div class="swatch" style="background: #9a8574;">#9a8574</div>
+                        <div class="swatch" style="background: #3b3734;">#3b3734</div>
+                        <div class="swatch" style="background: #5c88f4;">#5c88f4</div>
                       </div>
                     </ul>
-                    <img src="https://www.chickensmoothie.com/oekaki/image/image.php?id=4284884&size=large&format=png&rev=1734472137" class="display-image">
+                    <img src="https://www.chickensmoothie.com/oekaki/image/image.php?id=4364958&size=large&format=png&rev=1765072924" class="display-image">
                   </div>
 
               
