--- a/wmes/romulus.html
+++ b/wmes/romulus.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-  <meta content="width=device-width, intial-scale=1" name="viewport" />
+  <meta content="width=device-width, initial-scale=1" name="viewport" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
 
   <link rel="stylesheet" href="../css.css">
