--- a/wmes/argyle.html
+++ b/wmes/argyle.html
@@ -41,6 +41,7 @@
             <li><b>Argyle</b></li>
             <li>13.3hh ⋆ Stallion ⋆ 8 Years</li>
             <li><b>Mate:</b> Open</li>
+            <li><b><a href="bachelorherd.html">Herd Page</a></b></li>
             <li class="divider"><i class="fa-solid fa-star"></i></li>
             <li><b>Designer:</b> KittyCatKita</li>
             <li><b>Acquired On:</b> 03/01/2026</li>
