--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
           <img src="https://flyteck.cfw.me/files/wme/wmehssmsaline.png">
           <div class="flex-column">
             <h2>Domestic</h2>
-            <a class="button">View Herd</a>
+            <a class="button">View Equids</a>
           </div>
           <div class="herd-collapse">
             <img src="https://flyteck.cfw.me/files/wme/wmehssmhana.png">
@@ -94,7 +94,7 @@
           <img src="https://flyteck.cfw.me/files/wme/wmehssmromulus.png">
           <div class="flex-column">
             <h2>Loners</h2>
-            <a class="button">View Herd</a>
+            <a class="button">View Equids</a>
           </div>
           <div class="herd-collapse">
             <img src="https://flyteck.cfw.me/files/wme/wmehssmhana.png">
@@ -128,7 +128,6 @@
         <a href="wmes/aleus.html" class="tooltip"><img src="https://flyteck.cfw.me/files/wme/wmehssmaleus.png"><span class="tooltiptext">Aleus</span></a>
         <a href="wmes/fluffy.html" class="tooltip"><img src="https://flyteck.cfw.me/files/wme/wmehssmfluffy.png"><span class="tooltiptext">Fluffy</span></a>
         <a href="wmes/bailey.html" class="tooltip"><img src="https://flyteck.cfw.me/files/wme/wmehssmbailey.png"><span class="tooltiptext">Bailey</span></a>
-        <a href="wmes/nettle.html" class="tooltip"><img src="https://flyteck.cfw.me/files/wme/wmehssmliver.png"><span class="tooltiptext">Nettle</span></a>
         <a href="wmes/hazel.html" class="tooltip"><img src="https://flyteck.cfw.me/files/wme/wmehssmhazel.png"><span class="tooltiptext">Hazel</span></a>
         <a href="wmes/snickerdoodle.html" class="tooltip"><img src="https://flyteck.cfw.me/files/wme/wmehssmcookie.png"><span class="tooltiptext">Snickerdoodle</span></a>
         <a href="wmes/caspian.html" class="tooltip"><img src="https://flyteck.cfw.me/files/wme/wmehssmcaspian.png"><span class="tooltiptext">Caspian</span></a>
@@ -145,8 +144,10 @@
         <a href="wmes/argent.html" class="tooltip"><img src="https://flyteck.cfw.me/files/wme/wmehssmargent.png"><span class="tooltiptext">Argent</span></a>
         <a href="wmes/gnash.html" class="tooltip"><img src="https://flyteck.cfw.me/files/wme/wmehssmgnash.png"><span class="tooltiptext">Gnash</span></a>
         <a href="wmes/affogato.html" class="tooltip"><img src="https://flyteck.cfw.me/files/wme/wmehssmaffogato.png"><span class="tooltiptext">Affogato</span></a>
-        <a href="wmes/solstice.html" class="tooltip"><img src="https://flyteck.cfw.me/files/wme/wmehswinter.png"><span class="tooltiptext">Solstice</span></a>
+        <a href="wmes/solstice.html" class="tooltip"><img src="https://flyteck.cfw.me/files/wme/wmehssmsolstice.png"><span class="tooltiptext">Solstice</span></a>
         <a href="wmes/cheshire.html" class="tooltip"><img src="https://flyteck.cfw.me/files/wme/wmehssmcheshire.png"><span class="tooltiptext">Cheshire</span></a>
+        <a href="wmes/welsummer.html" class="tooltip"><img src="https://flyteck.cfw.me/files/wme/wmehssmwelsummer.png"><span class="tooltiptext">Welsummer</span></a>
+        <a href="wmes/argyle.html" class="tooltip"><img src="https://flyteck.cfw.me/files/wme/wmehssmargyle.png"><span class="tooltiptext">Argyle</span></a>
       </div>
 
     </div>
