--- a/wmes/dew.html
+++ b/wmes/dew.html
@@ -79,8 +79,8 @@
                   <li class="number"><b>10</b> ---</li>
                   <li class="number"><b>11</b> ---</li>
                 </ul>
-                <div style="flex: 1 1 auto;">
-                  <img src="https://flyteck.github.io/flyteck-wme-storage/img/art/dew/Dewshame.png" class="icon-image" style="zoom:70%">
+                <div>
+                  <img src="https://flyteck.github.io/flyteck-wme-storage/img/art/dew/DewFunny.png" class="icon-image">
                 </div>
               </div>
             </div> 
