--- a/wmes/bailey.html
+++ b/wmes/bailey.html
@@ -35,10 +35,10 @@
     <div class="area-title">Cool and confident</div>
 
         <div class="flex-row">
-          <img src="https://flyteck.github.io/flyteck-wme-storage/img/art/bailey/stylizedhsBailey.png" class="display-image">
+          <img src="https://flyteck.github.io/flyteck-wme-storage/img/art/bailey/stylizedhsBailey.png" class="display-image wide">
           <ul>
             <li><h2 style="margin:0;position: absolute;top: -20px;background: var(--white);padding: 0 6px;left: 10px;">Basics</h2></li>
-            <li><b>Bailey</b> | Named for road salt</li>
+            <li><b>Bailey</b> | Bailey's Irish Cream</li>
             <li>13.2hh ⋆ Mare ⋆ 6 years</li>
             <li><b>Mate:</b> <a href="saline.html">Saline</a></li>
             <li class="divider"><i class="fa-solid fa-star"></i></li>
