--- a/wmes/dew.html
+++ b/wmes/dew.html
@@ -35,7 +35,7 @@
     <div class="area-title">Cheeky in her spare time</div>
 
         <div class="flex-row">
-          <img src="https://flyteck.github.io/flyteck-wme-storage/img/art/dew/stylizedhsDew.png" class="display-image">
+          <img src="https://flyteck.github.io/flyteck-wme-storage/img/art/dew/stylizedhsDew.png" class="display-image wide">
           <ul>
             <li><h2 style="margin:0;position: absolute;top: -20px;background: var(--white);padding: 0 6px;left: 10px;">Basics</h2></li>
             <li><b>Dew Berry</b></li>
