--- a/wmes/argyle.html
+++ b/wmes/argyle.html
@@ -35,7 +35,7 @@
     <div class="area-title">Taking it easy</div>
 
         <div class="flex-row">
-          <img src="https://flyteck.github.io/flyteck-wme-storage/img/art/argyle/stylizedhsArgyle.png" class="display-image">
+          <img src="https://flyteck.github.io/flyteck-wme-storage/img/art/argyle/stylizedhsArgyle.png" class="display-image wide">
           <ul>
             <li><h2 style="margin:0;position: absolute;top: -20px;background: var(--white);padding: 0 6px;left: 10px;">Basics</h2></li>
             <li><b>Argyle</b></li>
