--- a/wmes/ciel.html
+++ b/wmes/ciel.html
@@ -35,7 +35,7 @@
     <div class="area-title">Soft-Spoken Sweetheart</div>
 
         <div class="flex-row">
-          <img src="https://flyteck.github.io/flyteck-wme-storage/img/art/ciel/stylizedhsCiel.png" class="display-image">
+          <img src="https://flyteck.github.io/flyteck-wme-storage/img/art/ciel/stylizedhsCiel.png" class="display-image wide">
           <ul>
             <li><h2 style="margin:0;position: absolute;top: -20px;background: var(--white);padding: 0 6px;left: 10px;">Basics</h2></li>
             <li><b>Ciel |</b> <i>"sky" in french</i></li>
