--- a/wmes/hazel.html
+++ b/wmes/hazel.html
@@ -19,7 +19,7 @@
   <a href="../index.html" class="button" id="back-button"><i class="fa-solid fa-angle-left"></i></a>
 
   <div class="flex-column container">
-    <h1><i class="fa-solid fa-seedling"></i> <span id="name">Hazel</span></h1>
+    <h1><i class="fa-brands fa-canadian-maple-leaf"></i> <span id="name">Hazel</span></h1>
 
     <div class="flex-row" id="page-nav">
       <select name="navigation" id="nav-dropdown">
