--- a/wmes/polaris.html
+++ b/wmes/polaris.html
@@ -80,7 +80,7 @@
                   <li class="number"><b>11</b> ---</li>
                 </ul>
                 <div style="flex: 1 1 auto;justify-content: center;display: flex;">
-                  <img src="https://flyteck.github.io/flyteck-wme-storage/img/art/polaris/PolarisAdult2.png" class="icon-image" style="zoom:80%">
+                  <img src="https://flyteck.github.io/flyteck-wme-storage/img/art/polaris/lastunicornpolaris.png" class="icon-image" style="max-width: 400px;">
                 </div>
               </div>
             </div> 
