--- a/wmes/solstice.html
+++ b/wmes/solstice.html
@@ -80,7 +80,7 @@
                   <li class="number"><b>11</b> ---</li>
                 </ul>
                 <div style="flex: 1 1 auto;justify-content: center;display: flex;">
-                  <img src="https://flyteck.github.io/flyteck-wme-storage/img/art/solstice/solsticesm.png" class="icon-image">
+                  <img src="https://flyteck.github.io/flyteck-wme-storage/img/art/solstice/solsticevhibi.png" class="icon-image" style="zoom:70%">
                 </div>
               </div>
             </div> 
