--- a/wmes/polaris.html
+++ b/wmes/polaris.html
@@ -35,7 +35,7 @@
     <div class="area-title">The relaxed dreamer</div>
 
         <div class="flex-row">
-          <img src="https://flyteck.github.io/flyteck-wme-storage/img/art/polaris/stylizedhsPolaris.png" class="display-image wide">
+          <img src="https://flyteck.github.io/flyteck-wme-storage/img/art/polaris/stylizedhsPolaris.png" class="display-image tall">
           <ul>
             <li><h2 style="margin:0;position: absolute;top: -20px;background: var(--white);padding: 0 6px;left: 10px;">Basics</h2></li>
             <li><b>Polaris</b></li>
