--- a/wmes/tia.html
+++ b/wmes/tia.html
@@ -72,7 +72,7 @@
                   <li class="number"><b>3</b> Reserved for <a href="https://www.chickensmoothie.com/Forum/memberlist.php?mode=viewprofile&u=214538">The Glass Doe</a></li>
                   <li class="number"><b>4</b> Tia x <a href="https://www.chickensmoothie.com/Forum/viewtopic.php?f=53&t=2298068">Aaron</a> = <a href="https://www.chickensmoothie.com/Forum/viewtopic.php?f=53&t=2298068">Gemini</a></li>
                   <li class="number"><b>5</b> Reserved for <a href="https://www.chickensmoothie.com/Forum/memberlist.php?mode=viewprofile&u=411631">Medd</a> (with <a href="https://www.chickensmoothie.com/Forum/viewtopic.php?f=53&t=2312535">Alibi</a>) <li>
-                  <li class="number"><b>6</b> ---</li>
+                  <li class="number"><b>6</b> Reserved for <a href="https://www.chickensmoothie.com/Forum/memberlist.php?mode=viewprofile&u=680866">MayGraves8</a></li>
                   <li class="number"><b>7</b> ---</li>
                   <li class="number"><b>8</b> ---</li>
                   <li class="number"><b>9</b> ---</li>
