--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <div class="flex-column" id="main-column">
     <div class="sticky-block">
       <h1>Flyteck's WMEs</h1>
-      <button id="tab-one-button" class="open tab-button">View Herds</button> <button id="tab-two-button" class="tab-button">View All</button>
+      <button id="tab-one-button" class="open tab-button">View Herds</button> <button id="tab-two-button" class="tab-button">View All</button> <button id="tab-three-button" class="tab-button">Planned Breedings</button>
       <hr style="margin: -5.3px 0 2px;">
     </div>
 
@@ -148,6 +148,103 @@
         <a href="wmes/cheshire.html" class="tooltip"><img src="https://flyteck.cfw.me/files/wme/wmehssmcheshire.png"><span class="tooltiptext">Cheshire</span></a>
         <a href="wmes/welsummer.html" class="tooltip"><img src="https://flyteck.cfw.me/files/wme/wmehssmwelsummer.png"><span class="tooltiptext">Welsummer</span></a>
         <a href="wmes/argyle.html" class="tooltip"><img src="https://flyteck.cfw.me/files/wme/wmehssmargyle.png"><span class="tooltiptext">Argyle</span></a>
+      </div>
+
+      <div id="tab-three" class="tab"> 
+        <h2>Planned Pairs</h2>
+
+        <ul id="planned-breedings">
+          <li>
+            <a href="https://www.chickensmoothie.com/Forum/viewtopic.php?f=53&t=2299076"><img src="https://www.chickensmoothie.com/oekaki/image/image.php?id=1936070&size=large&format=png&rev=1399600847"></a> <i class="fa-solid fa-xmark"></i> <a href="https://www.chickensmoothie.com/Forum/viewtopic.php?f=53&t=2356410"><img src="https://www.chickensmoothie.com/oekaki/image/image.php?id=1702055&size=large&format=png&rev=1404227927"></a>
+            <ul>
+              <li><b> Ferraro x Rocher</b></li>
+              <li><a href="https://i.imgur.com/vG0N7M4.png" target="_blank">[perms]</a></li>
+            </ul>
+          </li>
+
+          <li>
+            <a href="https://www.chickensmoothie.com/Forum/viewtopic.php?f=124&t=5083160"><img src="https://www.chickensmoothie.com/oekaki/image/image.php?id=4353855&size=large&format=png&rev=1760217999"></a> <i class="fa-solid fa-xmark"></i> <a href="https://www.chickensmoothie.com/Forum/viewtopic.php?f=124&t=5019039"><img src="https://www.chickensmoothie.com/oekaki/image/image.php?id=4290885&size=large&format=png&rev=1735963845"></a>
+            <ul>
+              <li><b> Eridani x Chapelle</b></li>
+              <li><a href="https://i.imgur.com/a089yLc.png" target="_blank">[perm]</a><a href="https://i.imgur.com/hUnPEoK.png" target="_blank">[perm]</a></li>
+            </ul>
+          </li>
+
+          <li>
+            <a href="https://www.chickensmoothie.com/Forum/viewtopic.php?f=124&t=2420947"><img src="https://www.chickensmoothie.com/oekaki/image/image.php?id=2050742&size=large&format=png&rev=1408487630"></a> <i class="fa-solid fa-xmark"></i> <a href="https://www.chickensmoothie.com/Forum/viewtopic.php?t=5087650"><img src="https://www.chickensmoothie.com/oekaki/image/image.php?id=4357931&size=large&format=png&rev=1761890024"></a>
+            <ul>
+              <li><b> Störtebeker x Conica</b></li>
+              <li>
+                <a class="form-button">[copy form] <span class="copied-tooltip">Copied!</span></a>
+                <pre class="form-content">[b]Owner[/b]: flyteck
+                [b]Stallion[/b]: [url=https://www.chickensmoothie.com/Forum/viewtopic.php?f=124&t=2420947]Störtebeker[/url]
+                [b]Stallion permission[/b]: [url=https://f2.toyhou.se/file/f2-toyhou-se/images/109876977_4dqQx48Fw2GhEGr.png]perm[/url]
+                [b]Mare[/b]: [url=https://www.chickensmoothie.com/Forum/viewtopic.php?t=5087650]Conica[/url]
+                [b]Mare Permission[/b]: [url=https://f2.toyhou.se/file/f2-toyhou-se/images/109722811_iX7qhQZz20zLxLe.png]perm[/url]
+                [b]Link to Banner Proof[/b]: [url=https://f2.toyhou.se/file/f2-toyhou-se/images/109751026_8AI2YbXvPYaS549.png]here![/url]
+                [b]Requested Traits[/b]:
+                1. Orange faded tail
+                2. Dad's quip distribution
+                3. Mare
+                [b]Preferred Artist:[/b] Copper or Oddly!
+
+                [img]https://www.chickensmoothie.com/oekaki/image/image.php?id=2050742&size=medium&format=png&rev=1408487630[/img] x [img]https://www.chickensmoothie.com/oekaki/image/image.php?id=4357931&size=medium&format=png&rev=1761890024[/img]</pre>
+              </li>
+            </ul>
+          </li>
+        </ul>
+
+        <h2>Loose Stallion Slots</h2>
+        <span class="loose-slot">
+          <a href="https://www.chickensmoothie.com/Forum/viewtopic.php?f=124&t=5036170"><img src="https://www.chickensmoothie.com/oekaki/image/image.php?id=4307826&size=large&format=png&rev=1741573572"></a>
+          <ul>
+            <li>Ler</li>
+            <li><a href="https://imgur.com/a/pUrfQ7f" target="_blank">[perms]</a></li>
+          </ul>
+        </span>
+
+        <span class="loose-slot">
+          <a href="https://www.chickensmoothie.com/Forum/viewtopic.php?f=124&t=5096030"><img src="https://www.chickensmoothie.com/oekaki/image/image.php?id=4365376&size=large&format=png&rev=1765281365"></a>
+          <ul>
+            <li>Rudy</li>
+            <li><a href="https://i.imgur.com/jrBIghW.png" target="_blank">[perms]</a></li>
+          </ul>
+        </span>
+
+        <span class="loose-slot">
+          <a href="https://www.chickensmoothie.com/Forum/viewtopic.php?f=124&t=5024372"><img src="https://www.chickensmoothie.com/oekaki/image/image.php?id=4296365&size=large&format=png&rev=1737752029"></a>
+          <ul>
+            <li>Hymn</li>
+            <li><a href="https://i.imgur.com/3v5M4DR.png" target="_blank">[perms]</a></li>
+          </ul>
+        </span>
+
+        <span class="loose-slot">
+          <a href="https://www.chickensmoothie.com/Forum/viewtopic.php?f=124&t=5079622"><img src="https://www.chickensmoothie.com/oekaki/image/image.php?id=4347233&size=large&format=png&rev=1759428681"></a>
+          <ul>
+            <li>Margrave</li>
+            <li><a href="https://i.imgur.com/Aan3jr9.png" target="_blank">[perms]</a></li>
+          </ul>
+        </span>
+
+        <h2>Loose Mare Slots</h2>
+
+        <span class="loose-slot">
+          <a href="https://www.chickensmoothie.com/Forum/viewtopic.php?f=124&t=5075365&p=150146233"><img src="https://www.chickensmoothie.com/oekaki/image/image.php?id=4345682&size=large&format=png&rev=1756704778"></a>
+          <ul>
+            <li>Alioth</li>
+            <li><a href="https://i.imgur.com/GUnpxh4.png" target="_blank">[perms]</a></li>
+          </ul>
+        </span>
+
+        <span class="loose-slot">
+          <a href="https://www.chickensmoothie.com/Forum/viewtopic.php?f=124&t=5054763&p=149415450"><img src="https://www.chickensmoothie.com/oekaki/image/image.php?id=4325807&size=large&format=png&rev=1747878497"></a>
+          <ul>
+            <li>Dawn</li>
+            <li><a href="https://i.imgur.com/41PuMIc.png" target="_blank">[perms]</a></li>
+          </ul>
+        </span>
+
       </div>
 
     </div>
