--- a/index.html
+++ b/index.html
@@ -151,9 +151,36 @@
       </div>
 
       <div id="tab-three" class="tab"> 
+        <h2>In the Oven</h2>
+        None right now!
         <h2>Planned Pairs</h2>
 
         <ul id="planned-breedings">
+          <li>
+            <a href="https://www.chickensmoothie.com/Forum/viewtopic.php?f=124&t=5087834"><img src="https://www.chickensmoothie.com/oekaki/image/image.php?id=4358078&size=large&format=png&rev=1761945075"></a> <i class="fa-solid fa-xmark"></i> <a href="https://www.chickensmoothie.com/Forum/viewtopic.php?f=124&t=5073555"><img src="https://www.chickensmoothie.com/oekaki/image/image.php?id=4342817&size=large&format=png&rev=1767151846"></a>
+            <ul>
+              <li><b> Prince x Cat</b></li>
+              <li>
+                <a class="form-button">[copy form] <span class="copied-tooltip">Copied!</span></a>
+                <pre class="form-content">
+[b]Owner to be:[/b] flyteck
+[b]Breeding Type:[/b] Event
+[b]Stallion:[/b] [url=https://www.chickensmoothie.com/Forum/viewtopic.php?f=124&t=5087834]Prince[/url]
+[b]Stallion permission:[/b] [url=https://www.chickensmoothie.com/Forum/viewtopic.php?f=103&t=5020171&p=149797980#p149797980]On his page![/url]
+[b]Mare:[/b] [url=https://www.chickensmoothie.com/Forum/viewtopic.php?f=124&t=5073555]Cat[/url]
+[b]Mare Permission:[/b] [url=https://www.chickensmoothie.com/Forum/viewtopic.php?f=103&t=2720509&start=70#p150088304]On her page![/url]
+[b]Requested Traits:[/b]
+1. EYES
+2. PINK (quip or fill if possible since I believe that's allowed for vday now?)
+3. Wing paint
+[b]Preferred Artist:[/b] Copper, Koel, Oddly, or Aravel!
+
+[img]https://www.chickensmoothie.com/oekaki/image/image.php?id=4358078&size=gallery&format=png&rev=1761945075[/img] x [img]https://www.chickensmoothie.com/oekaki/image/image.php?id=4342817&size=gallery&format=png&rev=1767151846[/img]</pre>
+              </li>
+            </ul>
+          </li>
+
+
           <li>
             <a href="https://www.chickensmoothie.com/Forum/viewtopic.php?f=53&t=2299076"><img src="https://www.chickensmoothie.com/oekaki/image/image.php?id=1936070&size=large&format=png&rev=1399600847"></a> <i class="fa-solid fa-xmark"></i> <a href="https://www.chickensmoothie.com/Forum/viewtopic.php?f=53&t=2356410"><img src="https://www.chickensmoothie.com/oekaki/image/image.php?id=1702055&size=large&format=png&rev=1404227927"></a>
             <ul>
@@ -176,19 +203,20 @@
               <li><b> Störtebeker x Conica</b></li>
               <li>
                 <a class="form-button">[copy form] <span class="copied-tooltip">Copied!</span></a>
-                <pre class="form-content">[b]Owner[/b]: flyteck
-                [b]Stallion[/b]: [url=https://www.chickensmoothie.com/Forum/viewtopic.php?f=124&t=2420947]Störtebeker[/url]
-                [b]Stallion permission[/b]: [url=https://f2.toyhou.se/file/f2-toyhou-se/images/109876977_4dqQx48Fw2GhEGr.png]perm[/url]
-                [b]Mare[/b]: [url=https://www.chickensmoothie.com/Forum/viewtopic.php?t=5087650]Conica[/url]
-                [b]Mare Permission[/b]: [url=https://f2.toyhou.se/file/f2-toyhou-se/images/109722811_iX7qhQZz20zLxLe.png]perm[/url]
-                [b]Link to Banner Proof[/b]: [url=https://f2.toyhou.se/file/f2-toyhou-se/images/109751026_8AI2YbXvPYaS549.png]here![/url]
-                [b]Requested Traits[/b]:
-                1. Orange faded tail
-                2. Dad's quip distribution
-                3. Mare
-                [b]Preferred Artist:[/b] Copper or Oddly!
+                <pre class="form-content">
+[b]Owner to be[/b]: flyteck
+[b]Breeding Type:[/b] Regular
+[b]Stallion[/b]: [url=https://www.chickensmoothie.com/Forum/viewtopic.php?f=124&t=2420947]Störtebeker[/url]
+[b]Stallion permission[/b]: [url=https://f2.toyhou.se/file/f2-toyhou-se/images/109876977_4dqQx48Fw2GhEGr.png]perm[/url]
+[b]Mare[/b]: [url=https://www.chickensmoothie.com/Forum/viewtopic.php?t=5087650]Conica[/url]
+[b]Mare Permission[/b]: [url=https://f2.toyhou.se/file/f2-toyhou-se/images/109722811_iX7qhQZz20zLxLe.png]perm[/url]
+[b]Requested Traits[/b]:
+1. Orange faded tail
+2. Dad's quip distribution
+3. Mare
+[b]Preferred Artist:[/b] Copper, Koel, Roe, or Oddly!
 
-                [img]https://www.chickensmoothie.com/oekaki/image/image.php?id=2050742&size=medium&format=png&rev=1408487630[/img] x [img]https://www.chickensmoothie.com/oekaki/image/image.php?id=4357931&size=medium&format=png&rev=1761890024[/img]</pre>
+[img]https://www.chickensmoothie.com/oekaki/image/image.php?id=2050742&size=medium&format=png&rev=1408487630[/img] x [img]https://www.chickensmoothie.com/oekaki/image/image.php?id=4357931&size=medium&format=png&rev=1761890024[/img]</pre>
               </li>
             </ul>
           </li>
@@ -242,6 +270,14 @@
           <ul>
             <li>Dawn</li>
             <li><a href="https://i.imgur.com/41PuMIc.png" target="_blank">[perms]</a></li>
+          </ul>
+        </span>
+
+        <span class="loose-slot">
+          <a href="https://www.chickensmoothie.com/Forum/viewtopic.php?f=124&t=5102601&p=151437655"><img src="https://www.chickensmoothie.com/oekaki/image/image.php?id=4370162&size=large&format=png&rev=1768009896"></a>
+          <ul>
+            <li>Cryo</li>
+            <li><a href="https://i.imgur.com/ovLcEqM.png" target="_blank">[perms]</a></li>
           </ul>
         </span>
 
