--- a/wmes/polaris.html
+++ b/wmes/polaris.html
@@ -67,7 +67,7 @@
                 <ul style="overflow:scroll;max-height: 200px; justify-content: flex-start; flex-grow:2;">
                   <li class="list-header"><span class="open-green">Open</span> || 11/11 Available</li>
 
-                  <li class="number"><b>1</b> ---</li>
+                  <li class="number"><b>1</b> Reserved for CopperChaos </li>
                   <li class="number"><b>2</b> ---<li>
                   <li class="number"><b>3</b> ---</li>
                   <li class="number"><b>4</b> ---</li>
