--- a/wmes/adonis.html
+++ b/wmes/adonis.html
@@ -101,7 +101,7 @@
                  <div class="flex-row">
                      <div class="flex-column">
                       <span class="tooltip">
-                        <span class="tooltiptext"><img src="https://www.chickensmoothie.com/oekaki/image/image.php?id=1906953&size=large&format=png&rev=1397007388" alt="Adonis"></span>
+                        <span class="tooltiptext"><img src="https://www.chickensmoothie.com/oekaki/image/image.php?id=1906953&size=large&format=png&rev=1770680497" alt="Adonis"></span>
                         <div class="center"><i class="fa-solid fa-mars"></i> Adonis</div>
                       </span>
                      </div>
@@ -228,18 +228,19 @@
                       <li><b>Notes:</b> ---<li>
                       <li class="divider"><i class="fa-solid fa-star"></i></li>
                       <div>
-                        <div class="swatch" style="background: #463026">#463026</div>
-                        <div class="swatch" style="background: #694d41;">#694d41</div>
-                        <div class="swatch" style="background: #dcd3cf;">#dcd3cf</div>
+                        <div class="swatch" style="background: #2e150f;">#2e150f</div>
+                        <div class="swatch" style="background: #522c24;">#522c24</div>
+                        <div class="swatch" style="background: #77433a;">#77433a</div>
+                        <div class="swatch" style="background: #e7dfde;">#e7dfde</div>
                         <div class="swatch" style="background: #160c08;">#160c08</div>
                         <div class="swatch" style="background: #fefefe;">#fefefe</div>
-                        <div class="swatch" style="background: #c2c2c2;">#c2c2c2</div>
+                        <div class="swatch" style="background: #bd6844;">#bd6844</div>
                         <div class="swatch" style="background: #c09361;">#c09361</div>
-                        <div class="swatch" style="background: #dcb3a1;">#dcb3a1</div>
+                        <div class="swatch" style="background: #d99e87;">#d99e87</div>
                         <div class="swatch" style="background: #5bc18d;">#5bc18d</div>
                       </div>
                     </ul>
-                    <img src="https://www.chickensmoothie.com/oekaki/image/image.php?id=1906953&size=large&format=png&rev=1397007388" class="display-image">
+                    <img src="https://www.chickensmoothie.com/oekaki/image/image.php?id=1906953&size=large&format=png&rev=1770680497" class="display-image">
                   </div>
 
               
