--- a/wmes/adonis.html
+++ b/wmes/adonis.html
@@ -40,7 +40,7 @@
             <li><h2 style="margin:0;position: absolute;top: -20px;background: var(--white);padding: 0 6px;left: 10px;">Basics</h2></li>
             <li><b>Adonis</b></li>
             <li>14.1hh ⋆ Stallion ⋆ 5 years</li>
-            <li><b>Mate:</b> <a href="https://www.chickensmoothie.com/Forum/viewtopic.php?f=53&t=2164709">Pablo</a></li>
+            <li><b>Mate:</b> Open</li>
             <li><b><a href="rocketherd.html">Herd Page</a></b></li>
             <li class="divider"><i class="fa-solid fa-star"></i></li>
             <li><b>Designer:</b> KittyCatKita</li>
