--- a/wmes/bailey.html
+++ b/wmes/bailey.html
@@ -67,7 +67,7 @@
                   <li class="list-header"><span class="open-green">Open</span> || 11/12 Available</li>
 
                   <li class="number"><b>1</b> Bailey x <a href="saline.html">Saline</a> = <a href="https://www.chickensmoothie.com/Forum/viewtopic.php?f=124&t=5065508&p=149734859">Kitsune</a></li>
-                  <li class="number"><b>2</b> ---<li>
+                  <li class="number"><b>2</b> Bailey x <a href="https://www.deviantart.com/horsy1050/art/WME-DA-0013-590950338">Viktuuri</a> = <a href="https://www.chickensmoothie.com/Forum/viewtopic.php?f=124&t=5111314">Charolette</a><li>
                   <li class="number"><b>3</b> ---</li>
                   <li class="number"><b>4</b> ---</li>
                   <li class="number"><b>5</b> ---</li>
@@ -89,6 +89,7 @@
               <h3 class="subtitle">Foal Gallery</h3>
               <div class="flex-row">
                 <a href="https://www.chickensmoothie.com/Forum/viewtopic.php?f=124&t=5065508&p=149734859"><img src="https://www.chickensmoothie.com/oekaki/image/image.php?id=4337088&size=large&format=png&rev=1752708633"></a>
+                <a href="https://www.chickensmoothie.com/Forum/viewtopic.php?f=124&t=5111314"><img src="https://www.chickensmoothie.com/oekaki/image/image.php?id=4378715&size=large&format=png&rev=1771111004"></a>
               </div>
             </div>
           </div>
